# openmp

./: CMakeLists.txt  hello.cpp  hello1.cpp
